Api redesign. clang-format config.
Redesigning interface for `Socket` on the main branch, because i'm the
only one who uses this lib.
Added .clang-format file for code-formatting.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,16 @@ if (CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
 	set(SOCK_STANDALONE TRUE)
 endif()
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+set(
+	GCC_COMPILER_FLAGS
+	"-g;-Wall;-Wextra;-Wshadow;-Wformat=2;-Wunused"
+)
+
+set(SOCK_BUFFER_MAX_SIZE 10240 CACHE STRING "Maximum amount of bytes that receive() function can handle" FORCE)
+
 option(SOCK_BUILD_TESTS "Build test programs" ${SOCK_STANDALONE})
 
 list(
@@ -23,7 +33,10 @@ if (WIN32)
 	list(APPEND EXTRA_LIBS ws2_32)
 endif()
 
-set_property(TARGET sock PROPERTY CXX_STANDARD 20)
+target_compile_options(
+	sock
+	PUBLIC ${GCC_COMPILER_FLAGS}
+)
 
 target_include_directories(
 	sock
@@ -35,6 +48,11 @@ target_link_libraries(
 	sock
 	PUBLIC
 		${EXTRA_LIBS}
+)
+
+configure_file(
+	${PROJECT_SOURCE_DIR}/include/sock/cmake_vars.h.in
+	${PROJECT_SOURCE_DIR}/include/sock/cmake_vars.h
 )
 
 # TESTS
@@ -60,7 +78,7 @@ if (SOCK_BUILD_TESTS)
 		tests/socket.cpp
 	)
 
-	set_property(TARGET sock_tests_executable PROPERTY CXX_STANDARD 20)
+	# set_property(TARGET sock_tests_executable PROPERTY CXX_STANDARD 20)
 
 	target_link_libraries(
 		sock_tests_executable
@@ -73,6 +91,11 @@ if (SOCK_BUILD_TESTS)
 
 	include(GoogleTest)
 	gtest_discover_tests(sock_tests_executable)
+
+	install(
+		TARGETS sock sock_tests_executable
+		RUNTIME DESTINATION bin
+	)
 
 endif()
 #~TESTS
