SocketWrapper now can be moved

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,15 +18,13 @@ set(SOCK_BUFFER_MAX_SIZE 10240 CACHE STRING "Maximum amount of bytes that receiv
 
 option(SOCK_BUILD_TESTS "Build test programs" ${SOCK_STANDALONE})
 
-list(
-	APPEND
-	SOURCE_FILES
-	${PROJECT_SOURCE_DIR}/src/socket.cpp
-	${PROJECT_SOURCE_DIR}/src/socket_factory.cpp
-	${PROJECT_SOURCE_DIR}/src/utils.cpp
+add_library(
+	sock
+	SHARED
+		${PROJECT_SOURCE_DIR}/src/socket.cpp
+		${PROJECT_SOURCE_DIR}/src/socket_factory.cpp
+		${PROJECT_SOURCE_DIR}/src/utils.cpp
 )
-
-add_library(sock SHARED ${SOURCE_FILES})
 
 if (WIN32)
 	list(APPEND EXTRA_LIBS wsock32)
